	  by adding a log_assert() to safeguard future development.
	- Fix #1282: log-destaddr fail on long ipv6 addresses.

13 May 2025: Wouter
	- Change default for so-sndbuf to 1m, to mitigate a cross-layer
	  issue where the UDP socket send buffers are exhausted waiting
	  for ARP/NDP resolution. Thanks to Reflyable for the report.

12 May 2025: Yorgos
	- Merge #1280: Fix auth nsec3 code. Fixes NSEC3 code to not break on
	  broken auth zones that include unsigned out of zone (above apex)
	  data. Could lead to hang while trying to prove a wildcard answer.

12 May 2025: Wouter
	- Fix #1283: Unsafe usage of atoi() while parsing the configuration
	  file.

9 May 2025: Wouter
	- Fix #1281: forward-zone "name: ." conflicts with auth-zone "name: ."
	  in 1.23.0, but worked in 1.22.0.

5 May 2025: Yorgos
	- Sync unbound and unbound-checkconf log output for unknown modules.

29 April 2025: Wouter
	- Fix for parallel build of dnstap protoc-c output.
	- Fix dnstap to use protoc.

29 April 2025: Yorgos
	- Merge #1276: Auto-configure '-slabs' values.

28 April 2025: Yorgos
	- Merge #1275: Use macros for the fr_check_changed* functions.

25 April 2025: Wouter
	- Fix #1272: assertion failure testcode/unitverify.c:202.

16 April 2025: Wouter
	- Increase default to `num-queries-per-thread: 2048`, when unbound is
	  compiled with libevent. It makes saturation of the task queue more
	  resource intensive and less practical. Thanks to Shiming Liu,
	  Network and Information Security Lab, Tsinghua University for the
	  report.

11 April 2025: Wouter
	- Tag for 1.23.0rc2. This became the release of 1.23.0 on 24 April
	  2025. The code repository continues with 1.23.1 in development.

11 April 2025: Yorgos
	- Merge #1265: Fix WSAPoll.

10 April 2025: Wouter
	- Fix for print of connection type in log-replies for dot and doh.

9 April 2025: Wouter
	- Fix to detect if atomic_store links in configure.
	- Fix #1264: unbound 1.22.0 leaks memory when doing DoH.

8 April 2025: Wouter